--- a/services_director.template
+++ b/services_director.template
@@ -388,16 +388,16 @@
               "/root/.sd-config.sh": {
                 "content": { "Fn::Join": [ "", [
                   "#!/bin/bash\n",
-                  "db_host=", { "Ref": "DBHost" }, "\n", 
-                  "db_user=", { "Ref": "DBUser" }, "\n", 
-                  "db_pass=", { "Ref": "DBPass" }, "\n", 
-                  "db_name=", { "Ref": "DBName" }, "\n", 
-                  "rest_user=", { "Ref": "RestUser" }, "\n", 
-                  "rest_pass=", { "Ref": "RestPass" }, "\n", 
-                  "alert_email=", { "Ref": "AlertEmail" }, "\n", 
-                  "licenses=", { "Fn::Join": [ ",", {"Ref": "Licenses"} ]}, "\n",
-                  "cert=", { "Fn::Join": [ "\\n", { "Ref": "SSLPublicKey" }]}, "\n",
-                  "key=", { "Fn::Join": [ "\\n", { "Ref": "SSLPrivateKey" }]}, "\n"
+                  "db_host='", { "Ref": "DBHost" }, "'\n", 
+                  "db_user='", { "Ref": "DBUser" }, "'\n", 
+                  "db_pass='", { "Ref": "DBPass" }, "'\n", 
+                  "db_name='", { "Ref": "DBName" }, "'\n", 
+                  "rest_user='", { "Ref": "RestUser" }, "'\n", 
+                  "rest_pass='", { "Ref": "RestPass" }, "'\n", 
+                  "alert_email='", { "Ref": "AlertEmail" }, "'\n", 
+                  "licenses='", { "Fn::Join": [ ",", {"Ref": "Licenses"} ]}, "'\n",
+                  "cert='", { "Fn::Join": [ "\\n", { "Ref": "SSLPublicKey" }]}, "'\n",
+                  "key='", { "Fn::Join": [ "\\n", { "Ref": "SSLPrivateKey" }]}, "'\n"
                 ]]},
                 "mode": "000755",
                 "owner": "root"
@@ -438,7 +438,7 @@
         "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
           "#!/bin/bash -xe\n",
           "apt-get update -y\n",
-          "apt-get install python-pip -y\n",
+          "apt-get install python-pip libmysqlclient18 mysql-client-5.6 -y\n",
           "pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz\n",
           "apt-get install awscli -y\n",
           "apt-get install jq -y\n",
