--- a/services_director.template
+++ b/services_director.template
@@ -171,6 +171,7 @@
     "AlertEmail": {
       "Description": "An email address for alerts",
       "Type": "String"
+      "Default": "root@localhost"
     }
 
   },
