not well formed

--- a/services_director.template
+++ b/services_director.template
@@ -170,7 +170,7 @@
 
     "AlertEmail": {
       "Description": "An email address for alerts",
-      "Type": "String"
+      "Type": "String",
       "Default": "root@localhost"
     }
 
