--- a/services_director.template
+++ b/services_director.template
@@ -15,7 +15,7 @@
         },
         {
           "Label" : { "default" : "Services Director Configuration" },
-          "Parameters" : [ "SDVers", "RestUser", "RestPass", "SSLPublicKey", "SSLPrivateKey", "DBHost", "DBUser", "DBPass", "DBName", "Licenses", "AlertEmail" ]
+          "Parameters" : [ "SDVers", "SDEncKey", "RestUser", "RestPass", "SSLPublicKey", "SSLPrivateKey", "DBHost", "DBUser", "DBPass", "DBName", "Licenses", "AlertEmail" ]
         },
         {
           "Label" : { "default" : "Security Configuration" },
@@ -29,6 +29,7 @@
         "InstanceType" : { "default" : "SD instance type:" },
         "KeyName" : { "default" : "SSH Key Name:" },
         "SDVers" : { "default" : "Services Director Version:" },
+        "SDEncKey" : { "default" : "SD Encryption Key:" },
         "RestUser" : { "default" : "SD REST Username:" },
         "RestPass" : { "default" : "SD REST Password:" },
         "SSLPublicKey" : { "default" : "SSL Public Key:" },
@@ -65,6 +66,16 @@
         "17.2"
       ],
       "ConstraintDescription" : "Must be a valid SD version"
+    },
+
+    "SDEncKey": {
+      "Description" : "Password for the SD Encryption Key. Must be atleast 8 characters containing upper and lower case letters, numbers and symbols",
+      "Type"        : "String",
+      "MinLength"   : "6",
+      "MaxLength"   : "32",
+      "AllowedPattern" : "(?=^.{6,255}$)((?=.*\\d)(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[^A-Za-z0-9])(?=.*[a-z])|(?=.*[^A-Za-z0-9])(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[A-Z])(?=.*[^A-Za-z0-9]))^.*",
+      "NoEcho"         : "true",
+      "Default"        : "Password1_3"
     },
 
     "KeyName": {
@@ -394,6 +405,7 @@
                   "db_pass='", { "Ref": "DBPass" }, "'\n",
                   "db_name='", { "Ref": "DBName" }, "'\n",
                   "sd_vers='", { "Ref": "SDVers" }, "'\n",
+                  "sd_enc_key='", { "Ref": "SDEncKey" }, "'\n",
                   "rest_user='", { "Ref": "RestUser" }, "'\n",
                   "rest_pass='", { "Ref": "RestPass" }, "'\n",
                   "alert_email='", { "Ref": "AlertEmail" }, "'\n",
