--- a/services_director.template
+++ b/services_director.template
@@ -15,7 +15,7 @@
         },
         {
           "Label" : { "default" : "Services Director Configuration" },
-          "Parameters" : [ "SDVers", "SDEncKey", "RestUser", "RestPass", "SSLPublicKey", "SSLPrivateKey", "DBHost", "DBUser", "DBPass", "DBName", "Licenses", "AlertEmail" ]
+          "Parameters" : [ "SDVers", "SDEncKey", "RestUser", "RestPass", "SSLPublicKey", "SSLPrivateKey", "DBHost", "DBUser", "DBPass", "DBName", "Licenses", "AlertEmail", "AlertServer" ]
         },
         {
           "Label" : { "default" : "Security Configuration" },
@@ -40,6 +40,7 @@
         "DBName" : { "default" : "Mysql DB Database name:" },
         "Licenses" : { "default" : "CSV list of your license keys:" },
         "AlertEmail" : { "default" : "Email address for alerts:" },
+        "AlertServer" : { "default" : "SMTP Server for alerts:" },
         "RemoteAccessCIDR" : { "default" : "Remote Access CIDR:" }
       }
     }
@@ -183,6 +184,12 @@
       "Description": "An email address for alerts",
       "Type": "String",
       "Default": "root@localhost"
+    },
+
+    "AlertServer": {
+      "Description": "SMTP email server for alerts",
+      "Type": "String",
+      "Default": "localhost"
     }
 
   },
@@ -409,6 +416,7 @@
                   "rest_user='", { "Ref": "RestUser" }, "'\n",
                   "rest_pass='", { "Ref": "RestPass" }, "'\n",
                   "alert_email='", { "Ref": "AlertEmail" }, "'\n",
+                  "alert_server='", { "Ref": "AlertServer" }, "'\n",
                   "licenses='", { "Fn::Join": [ ",", {"Ref": "Licenses"} ]}, "'\n",
                   "cert='", { "Fn::Join": [ "\\n", { "Ref": "SSLPublicKey" }]}, "'\n",
                   "key='", { "Fn::Join": [ "\\n", { "Ref": "SSLPrivateKey" }]}, "'\n"
