--- a/services_director.template
+++ b/services_director.template
@@ -214,7 +214,7 @@
     },
 
     "SDLink" : {
-        "17.2" : { "URL" : "https://github.com/TuxInvader/ServicesDirectorCFT/blob/master/brocade-services-director_17.2_amd64.deb?raw=true" }
+        "17.2" : { "URL" : "https://raw.githubusercontent.com/TuxInvader/ServicesDirectorCFT/master/brocade-services-director_17.2_amd64.deb" }
     }
 
   },
@@ -400,7 +400,7 @@
                 "owner": "root"
               },
               "/root/sd-deploy.sh": {
-                "source": "https://github.com/TuxInvader/ServicesDirectorCFT/blob/master/sd-deploy.sh?raw=true",
+                "source": "https://raw.githubusercontent.com/TuxInvader/ServicesDirectorCFT/master/sd-deploy.sh",
                 "mode": "000755",
                 "owner": "root"
               },
