--- a/services_director.template
+++ b/services_director.template
@@ -517,7 +517,7 @@
         "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
           "#!/bin/bash -xe\n",
           "apt-get update -y\n",
-          "apt-get install python-pip libmysqlclient18 mysql-client-5.6 expect -y\n",
+          "apt-get install python-pip libmysqlclient18 mysql-client-5.6 expect ssl-cert -y\n",
           "pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz\n",
           "apt-get install awscli -y\n",
           "apt-get install jq -y\n",
