signal cfn from deploy script

--- a/services_director.template
+++ b/services_director.template
@@ -476,7 +476,8 @@
                   "alert_server='", { "Ref": "AlertServer" }, "'\n",
                   "licenses='", { "Fn::Join": [ ",", {"Ref": "Licenses"} ]}, "'\n",
                   "cert='", { "Fn::Join": [ "\\n", { "Ref": "SSLPublicKey" }]}, "'\n",
-                  "key='", { "Fn::Join": [ "\\n", { "Ref": "SSLPrivateKey" }]}, "'\n"
+                  "key='", { "Fn::Join": [ "\\n", { "Ref": "SSLPrivateKey" }]}, "'\n",
+                  "wait_handle='", { "Ref": "WaitHandle01" }, "'\n",
                 ]]},
                 "mode": "000755",
                 "owner": "root"
